monitoring/manifests/grafana/grafana-ingress.yml
kind: Service
apiVersion: v1
metadata:
  name: grafana
  namespace: kube-system
  labels:
    app: grafana
    tier: reverse-proxy
spec:
  type: ExternalName
  externalName: grafana.monitoring
  ports:
    - port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: grafana
    tier: reverse-proxy
spec:
  rules:
    - host: grafana.mmontes-dev.duckdns.org
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 80
